Fix flavor text alignment

--- a/src/documentation/sass/HomePage.scss
+++ b/src/documentation/sass/HomePage.scss
@@ -138,6 +138,7 @@
 .flavorTitle {
   font-size: $ms-font-size-xl;
   font-weight: $ms-font-weight-semilight;
+  text-align: center;
 }
 
 .flavorDescription {
